# backend/main.go
@@ -4,15 +4,28 @@ import (
 	_ "backend/docs"
 	"backend/handlers"
 	"backend/middlewares"
+	"backend/models"
 	"log"
 
 	"github.com/gofiber/swagger"
+	"gorm.io/driver/sqlite"
+	"gorm.io/gorm"
 
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 )
 
 func main() {
+	// Database setup
+	db, err := gorm.Open(sqlite.Open("database/database.db"), &gorm.Config{})
+	if err != nil {
+		log.Fatal("Failed to connect to database:", err)
+	}
+	log.Println("[INIT][INFO] Connected to the database")
+	db.AutoMigrate(&models.User{})
+
+	userHandler := handlers.UserHandler{DB: db}
+
 	app := fiber.New()
 
 	// Enable CORS
@@ -31,8 +44,14 @@ func main() {
 	})
 
 	// API Route
-	app.Post("/login", handlers.Login)
 	app.Post("/guess/:guess", middlewares.AuthMiddleware, handlers.Guess)
+
+	app.Post("/users/login", userHandler.Login)
+	app.Post("/users", userHandler.CreateUser)
+	app.Get("/users/:id", userHandler.GetUser)
+	app.Put("/users/:id", userHandler.UpdateUser)
+	app.Delete("/users/:id", userHandler.DeleteUser)
+	app.Get("/users", userHandler.GetAllUsers)
 
 	// Start the server
 	log.Fatal(app.Listen(":3000"))
