# backend/models/request.go
@@ -1,0 +1,6 @@
+package models
+
+type UserRequest struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
